experimental/ir/testdata/syntax/proto2_unquoted.proto.stderr.txt
error: the value of a `syntax` declaration must be a string literal
  --> testdata/syntax/proto2_unquoted.proto:16:10
   |
16 | syntax = proto2;
   |          ^^^^^^
  help: add quotes to make this a string literal
   |
16 | syntax = "proto2";
   |          +      +

encountered 1 error
